# Solana-Examples

./: .gitignore  Readme.md
persisting-data/: Readme.md  package-lock.json  package.json
persisting-data/src/client/: square.ts
persisting-data/src/square/: Cargo.toml
persisting-data/src/square/src/: lib.rs
persisting-data/src/sum/: Cargo.toml
persisting-data/src/sum/src/: lib.rs
solana-transaction/: Readme.md  package-lock.json  package.json
solana-transaction/src/client/: main.ts
solana-transaction/src/program/: Cargo.toml
solana-transaction/src/program/src/: lib.rs
transfer-sol/: Readme.md  package-lock.json  package.json
transfer-sol/_cicd/: cicd.sh
transfer-sol/_dist/program/: program-keypair.json
transfer-sol/accounts/: eydi.json  john.json  test1.json
transfer-sol/src/client/: main.ts
transfer-sol/src/program/: Cargo.toml
transfer-sol/src/program/src/: lib.rs
