[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.10.31"

[dev-dependencies]
solana-program-test = "1.10.31"
solana-sdk = "1.10.31"

[lib]
crate-type = ["cdylib", "lib"]